--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-	"name": "athlon1600/php-proxy",
+	"name": "anoidgit/php-proxy",
 	"type": "library",
 	"keywords": ["php proxy", "proxy script", "php web proxy", "web proxy", "php proxy script"],
-	"homepage": "https://www.php-proxy.com/",
+	"homepage": "https://github.com/anoidgit/php-proxy",
 	"require": {
 		"ext-curl": "*",
-		"symfony/event-dispatcher": "~3.2"
+		"symfony/event-dispatcher": "~3.3.2"
 	},
 	"suggest": {
 		"predis/predis": "For caching purposes"
